alinmapay/openshift-KDC/ms-authentication/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdc-authentication
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      dnsConfig:
        searches:
        - me.alinma.internal
      containers:
      - name: authentication
        image: 'registry-kdc.alinma.internal/alinmapay-v2/ms-authentication:c25f7de'
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - response=$(curl -s http://localhost:8080/v2/alinmapay/authentication/actuator/health)
            - echo $response | grep -q '"readinessState":{"status":"UP"}'
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 10
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - response=$(curl -s http://localhost:8080/v2/alinmapay/authentication/actuator/health)
            - echo $response | grep -q '"livenessState":{"status":"UP"}'
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 15
        resources:
          requests:
            cpu: "250m"
            memory: "2Gi"
          limits:
            memory: "2Gi"
