alinmapay/openshift-KDC/ms-authentication/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
spec:
  selector:
    app: authentication
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8080
  type: ClusterIP
